# data_collection_with_xela_sensor

data_collection/: CMakeLists.txt  package.xml
data_collection/launch/: data_collection.launch
data_collection/src/: collect_dataset.py  testing.py
squirrel_driver-master/squirrel_sensing_node/: CMakeLists.txt  README.md  package.xml  tactile_calibration.ini
squirrel_driver-master/squirrel_sensing_node/config/: calibration.yaml
squirrel_driver-master/squirrel_sensing_node/doc/daq_arduino_old/: daq_arduino_old.ino
squirrel_driver-master/squirrel_sensing_node/doc/rosserial_arduino_proximity_node/: rosserial_arduino_proximity_node.ino
squirrel_driver-master/squirrel_sensing_node/doc/rosserial_arduino_tactile_node/: rosserial_arduino_tactile_node.ino
squirrel_driver-master/squirrel_sensing_node/include/squirrel_sensing_node/: common_defines.h  node.h  sensing_drivers.h
squirrel_driver-master/squirrel_sensing_node/launch/: launch_with_rosserial.launch  slip_detection.launch  startup.launch
squirrel_driver-master/squirrel_sensing_node/nodes/: calibrate_proximity  calibrate_tactile
squirrel_driver-master/squirrel_sensing_node/src/: main.cpp  node.cpp  sensing_drivers.cpp
xela_server/: CMakeLists.txt  package.xml
xela_server/Launch/: service.launch  slip_detector.launch
xela_server/data_load/: labels_data_26993.csv  new_robot_data_26993.npy  robot_data_26993.npy
xela_server/msg/: XSensor.msg  XStream.msg
xela_server/scripts/: Sensor_visualisation.py  dataReader.py  dataReader_manualslip.py  dataReader_validation.py  slip_detector.py  slip_detector_001.py  tactileDataListener.py  taxelPublisher.py  test.py  xela_data_array_publisher__.py
